# ddd-calculator-api

./: .gitignore  README.md  pyproject.toml
calculator/application/: __init__.py  operation_command_model.py  operation_command_usecase.py  operation_query_model.py  operation_query_service.py  operation_query_usecase.py
calculator/domain/: Number.py  Operation.py  Operation_exception.py  Operator.py  Repository.py  __init__.py
calculator/infrastructure/redis/: RepositoryImplementation.py  db.py
utils/: Constants.py
