[tool.poetry]
name = "python-ddd"
version = "0.1.0"
description = ""
authors = ["Jamil Torres <42499083+jatobrun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.2.2"
fastapi = "^0.75.1"
shortuuid = "^1.0.8"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
